fix: increment z-index of sticky class

--- a/projecto/frontend5/src/styles.scss
+++ b/projecto/frontend5/src/styles.scss
@@ -36,7 +36,7 @@ a {
   position: sticky;
   top: 0;
   background-color: var(--clr-global-app-background);
-  z-index: 1;
+  z-index: 10;
 }
 
 /*
